Fixed content rendering outside of page-wrap

--- a/bag-of-trigs-ui/src/App.scss
+++ b/bag-of-trigs-ui/src/App.scss
@@ -1,5 +1,6 @@
 .page-wrap {
   height: 100vh;
+  overflow: auto;
 
   &:before {
     content: "";
